examples/test/testpolicy7228.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7228
  namespace: namespace162
spec:
  podSelector:
    matchLabels:
      key11: value8
      key35: value12
      key24: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value16
          key3: value36
          key17: value2
      podSelector:
        matchLabels:
          key27: value19
